src/objects/API_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>API Trackers</relationshipLabel>
        <relationshipName>API_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>API Trackers</relationshipLabel>
        <relationshipName>API_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Detail_Response__c</fullName>
        <label>Transaction Detail Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>API Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Transaction_Detail_Response__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>API Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>